--- a/website/css/index.css
+++ b/website/css/index.css
@@ -845,8 +845,8 @@ footer .legal {
     }
 
     #ui.sticky {
-        padding-left: 0 !important;
-        padding-right: 0 !important;
+        padding-left: 20px !important;
+        padding-right: 20px !important;
     }
 
     #ui.sticky #info {
